--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
+!**/__pycache__/
 
 # C extensions
 *.so
@@ -55,3 +54,4 @@ target/
 
 
 references/
+checkpoints/*/*.pth
